# project1_Gafarov_artem_1

./: # На все вопросы жми Enter  # На все вопросы жми Enter.pub  .gitignore  Makefile  README.md  pyproject.toml
labyrinth_game/: constants.py  main.py  player_actions.py  utils.py
